--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/react-dom": "^17.0.1",
     "@welldone-software/why-did-you-render": "^6.1.1",
     "axios": "^0.21.1",
+    "html-react-parser": "^1.2.4",
     "html-to-text": "^7.0.0",
     "immer": "^8.0.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-froala-wysiwyg": "^3.2.6-1",
     "react-hook-form": "^6.15.5",
