--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@craco/craco": "^6.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@shhhplus/react-router-relative-link": "^0.1.9",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "@tinymce/tinymce-react": "^3.12.2",
     "@types/ckeditor": "^4.9.10",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
